--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: black;
+    background: #100f13;
     color: var(--amarelo);
     display: flex;
     flex-direction: column;
@@ -52,14 +52,9 @@
     transition: opacity 1s ease-in-out;
   }
   
-  .glow-title {
-    font-size: 4rem;
-    font-weight: bold;
-    color: white;
-    text-shadow: 0 0 10px white, 0 0 20px white, 0 0 40px white;
-    margin-bottom: 50px;
-    animation: fadeIn 2s ease-out;
-  }
+  .img-intro img{
+    bottom: -5em;
+}
   
   .typing-text {
     font-family: intro;
@@ -153,10 +148,13 @@ body{
 
 }
 
+/* AVATAR DO BOT */
 .chat-body .bot-message .bot-avatar{
     width: 4%;
+    border-radius: 50%;
+    position: relative;
 }
-
+  
 
 /* BARRA DE PESQUISA USUARIO */
 .chat-footer{
@@ -411,6 +409,8 @@ position: absolute;
 .chat-body .bot-message .thinking-indicator .dot:nth-child(3){
     animation-delay: .4s ;
 }
+
+
 
 /* PERGUNTA USUARIO */
 
