--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@ body{
     align-items: center;
     background: var(--cinza);
     padding: 15px;
-    justify-content: space-between;
+    justify-content: center;
 }
 
 .chat-header .header-info{
@@ -173,12 +173,11 @@ body{
     /* outline: 1px solid var(--amarelo); */
     box-shadow: -5px 5px 1px var(--background),
     -8px 8px 1px var(--amarelo);
-    padding: 20px;
+    padding: 10px;
+    border-radius: 2em;
     background: var(--cinza);
     transition: .3s ease-in-out;
     width: 50%;
-    
-    
 }
 
 .chat-footer .chat-form:focus-within{
@@ -198,6 +197,26 @@ body{
     background: var(--cinza) ;
     color: white;
     /* border-radius: inherit; */
+}
+
+/* FORMATAÇÃO RESPOSTA DE TEXTO */
+.message-text h1, 
+.message-text h2, 
+.message-text h3 {
+    margin: 12px 0 8px;
+    font-weight: bold;
+    color: var(--amarelo);
+}
+
+.message-text p {
+    margin: 6px 2px;
+    line-height: 1.5;
+}
+
+.message-text li {
+    margin-left: 20px;
+    list-style-type: disc;
+
 }
 
 
